--- a/templates/base.html
+++ b/templates/base.html
@@ -64,16 +64,16 @@
                   Informações sobre a rede
                     <ul class="list-group">
                         <li>Endereço IP: </li>
-                        <li class="">Máscara de Sub-Rede: </li>
-                        <li class="">CIDR: </li>
-                        <li class="">Classe de IPs: </li>
-                        <li class="">Tipo: </li>
-                        <li class="">Nº de Hosts / Sub-Rede: </li>
+                        <li >Máscara de Sub-Rede: </li>
+                        <li >CIDR: </li>
+                        <li >Classe de IPs: </li>
+                        <li >Tipo: </li>
+                        <li >Nº de Hosts / Sub-Rede: </li>
                         <li><hr class="dropdown-divider"></li>
                         <h5 class="mt-3 exampleIP"></h5>
-                        <li class="">Endereço da Rede: </li>
-                        <li class="">Intervalo de Hosts: </li>
-                        <li class="">Broadcast: </li>
+                        <li >Endereço da Rede: </li>
+                        <li >Intervalo de Hosts: </li>
+                        <li >Broadcast: </li>
                     </ul>
                 </div>
               </div>
