--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,11 @@
+{{ define "base" }}
+
 <!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Calculadora de IP</title>
+    <title>{{ block "title" . }}Calculadora de IP{{ end }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="icon" href="../assets/images/iconIp.png" type="image/x-icon">
@@ -58,7 +60,10 @@
                     <option value="32">255.255.255.255 /32</option>
                 </select>
                   <h5 class="mt-3 exampleIP">Ex: 192.168.0.10 255.255.255.0 ou 192.168.0.10 /24</h5>
-                  <button type="submit" id="botaoVerificar" class="btn btn-success">Verificar IP</a>
+                  <div class="d-flex">
+                    <button type="submit" id="botaoVerificar" class="btn btn-success">Verificar IP</button>
+                    <a href="/calc2" class="btn btn-primary mx-3">Calculadora de IP 2</a>
+                  </div>
                 </div>
                 <div class="card-footer custom-card-footer text-body-secondary fw-bold">
                   Informações sobre a rede
@@ -87,8 +92,8 @@
         </div>
         <p>&copy; 2024 My CalcIP LG. Todos os direitos reservados.</p>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="../assets/js/script.js"></script>
   </body>
 </html>
+{{ end }}
